img text align + settings save popup fix + del style

--- a/assets/emojipicker.css
+++ b/assets/emojipicker.css
@@ -66,6 +66,8 @@ emoji-picker.light {
 	display: flex;
 	flex-wrap: wrap;
 	gap: 7px;
+	max-height: 200px;
+	overflow: auto;
 }
 
 .custom-picker .element {
